# C-projects

C3_SimpleBashUtils-1-develop/src/cat/: Makefile  s21_cat.c  s21_cat.h
C3_SimpleBashUtils-1-develop/src/cat/test_files/: test_4_cat.txt
C3_SimpleBashUtils-1-develop/src/grep/: Makefile  s21_grep.c  s21_grep.h  tests.sh
C3_SimpleBashUtils-1-develop/src/grep/test_files/: test_1_grep.txt  test_2_grep.txt  test_7_grep.txt  test_ptrn_grep.txt
C6_s21_matrix-1-develop/src/: Makefile  s21_matrix.h
C6_s21_matrix-1-develop/src/functions/: s21_calc_complements.c  s21_create_matrix.c  s21_determinant.c  s21_eq_matrix.c  s21_init_matrix.c  s21_inverse_matrix.c  s21_is_matrix_correct.c  s21_mult_matrix.c  s21_mult_number.c  s21_remove_matrix.c  s21_sub_matrix.c  s21_sum_matrix.c  s21_transpose.c
C6_s21_matrix-1-develop/src/tests/: s21_calc_complements_test.c  s21_create_matrix_test.c  s21_determinant_test.c  s21_eq_matrix_test.c  s21_inverse_matrix_test.c  s21_matrix_test.c  s21_matrix_test.h  s21_mult_matrix_test.c  s21_mult_number_test.c  s21_remove_matrix_test.c  s21_sub_matrix_test.c  s21_sum_matrix_test.c  s21_transpose_test.c
C7_SmartCalc_v1.0-1-develop/src/: Makefile  s21_test_calc.c
C7_SmartCalc_v1.0-1-develop/src/Calculator/: CMakeLists.txt  credit.h  debit.cpp  debit.h  debit.ui  fonts.qrc  main.cpp  mainwindow.h  mainwindow.ui
C7_SmartCalc_v1.0-1-develop/src/back_functions/: s21_calculation.c  s21_from_struct_to_post.c  s21_infix_to_struct.c
SmartCalc/materials/: Image.qrc
SmartCalc/src/: s21_SmartCalc.h
SmartCalc/src/Calculator/: Calculator_en_US.ts  credit.cpp  credit.ui  mainwindow.cpp
SmartCalc/src/back_functions/: s21_initialise_operator.c  s21_operators.c  s21_post_to_result.c  s21_stack_functions.c
